--- a/src/test/resources/testcontainers.properties
+++ b/src/test/resources/testcontainers.properties
@@ -1,7 +1,9 @@
-ryuk.container.image = 172.23.160.1:9001/docker-hosted/ryuk
+#ryuk.container.image = 172.23.160.1:9001/docker-hosted/ryuk
+ryuk.container.image = docker.io/testcontainers/ryuk:0.3.3
 #Fetching ryuk cleanup container image from Local Nexus Repo
 
-socat.container.image = 172.23.160.1:9001/docker-hosted/socat
+#socat.container.image = 172.23.160.1:9001/docker-hosted/socat
+socat.container.image = docker.io/alpine/socat
 #Fetching ambassador/proxy container image form Local Nexus Repo
 
 ## Optional ##
@@ -18,7 +20,7 @@ vncrecorder.container.image = testcontainers/vnc-recorder:1.1.0
 compose.container.image = docker/compose:1.8.0
 #Required if using Docker Compose
 
-kafka.container.image = confluentinc/cp-kafka
+kafka.container.image = docker.io/confluentinc/cp-kafka
 #Used by KafkaContainer
 
 localstack.container.image = localstack/localstack
@@ -26,3 +28,5 @@ localstack.container.image = localstack/localstack
 
 pulsar.container.image = apachepulsar/pulsar:2.2.0
 #Used by Apache Pulsar
+
+#export TESTCONTAINERS_RYUK_DISABLED=true
