--- a/src/test/resources/compose-test.yml
+++ b/src/test/resources/compose-test.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   zookeeper:
-    image: confluentinc/cp-zookeeper:latest
+    image: docker.io/confluentinc/cp-zookeeper:latest
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -9,7 +9,7 @@ services:
       - 22181:2181
   
   kafka:
-    image: confluentinc/cp-kafka:latest
+    image: docker.io/confluentinc/cp-kafka:latest
     depends_on:
       - zookeeper
     ports:
